--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react-native-snap-carousel": "^3.8.9",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-image-picker": "^14.5.0",
