--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
@@ -19,7 +20,9 @@
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-image-picker": "^14.5.0",
+    "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
@@ -28,8 +31,10 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.8.3",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.8.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^9.0.3",
